src/objects/Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Acceptable_Part_Cost_Variance__c</fullName>
        <defaultValue>50.00</defaultValue>
        <description>What is acceptable cost variance with default value 50 and can be adjusted as required.</description>
        <inlineHelpText>What is acceptable cost variance with default value 50 and can be adjusted as required.</inlineHelpText>
        <label>Acceptable Part Cost Variance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accrue_Trade_Tax_Until_Unit_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filed for proper handling of the sales tax accrual on trade-ins for Australia.</description>
        <label>Accrue Sales Tax Until Units Are Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Pause_Of_Job_Clocking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Pause Of Job Clocking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Customer_Service_Job_Without_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Customer Service Job Without Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_fulfilling_of_deal_unit_options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow fulfilling of deal unit options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Always_obey_publish_in_feeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always obey publish in feeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Select_Orders_In_Part_Receiving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Select Orders In Part Receiving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Enable_Tax_On_Deal_By_Customer_Addr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Enable Tax On Deal By Customer Addr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_tax_rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic tax rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Individual_Taxes_On_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Individual Taxes On Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Individual_Taxes_On_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Individual Taxes On Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Archive_After_Days__c</fullName>
        <description>Archive customer order in after given number of days.</description>
        <label>Automatically Archive After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automatically_Archive_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Archive Quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Delete_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Delete Quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Delete_After_Days__c</fullName>
        <description>Automatically delete customer orders after given number of days</description>
        <label>Automatically Delete After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalcTax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalcTax_LineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_LineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Payment_Rounding_Factor__c</fullName>
        <description>Enables the rounding of dollar amounts on Cash Payments</description>
        <inlineHelpText>Enables the rounding of dollar amounts on Cash Payments</inlineHelpText>
        <label>Cash Payment Rounding Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <description>Dealer Number for use on forms.</description>
        <inlineHelpText>Dealer Number for use on forms.</inlineHelpText>
        <label>Dealer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Unit_Options_Taxed_Like_Unit__c</fullName>
        <description>Semicolon (;) separated option names where deal unit tax will be applied.</description>
        <label>Deal Unit Options Taxed Like Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Environmental_Fee__c</fullName>
        <label>Default Environmental Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price_Level_on_Internal_Service__c</fullName>
        <label>Default Price Level on Internal Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Tax_on_Internal_Service__c</fullName>
        <label>Default Sales Tax on Internal Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Claim_Deductibles__c</fullName>
        <label>Default Tax on Claim Deductibles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Fee__c</fullName>
        <label>Default Tax on Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Odometer_Type__c</fullName>
        <inlineHelpText>Values can be -
            &quot;Km&quot;
            &quot;Mi&quot;
            &quot;Hr&quot;</inlineHelpText>
        <label>Default Odometer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Labor__c</fullName>
        <label>Default Tax on Labor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Part__c</fullName>
        <label>Default Tax on Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Unit__c</fullName>
        <label>Default Tax on Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Vendor_Product__c</fullName>
        <label>Default Tax on Vendor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Technician_Cost_Rate__c</fullName>
        <label>Default Technician Cost Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Technician_Costing_Rate__c</fullName>
        <description>Not to be used. Use Default_Technician_Cost_Rate__c.</description>
        <label>Default Technician Costing Rate</label>
        <inlineHelpText>Not to be used. Use Default_Technician_Cost_Rate__c.</inlineHelpText>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>DF_commission_in_FI_company_payments__c</fullName>
		<defaultValue>false</defaultValue>
		<label>DF commission in FI company payments</label>
		<type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Automatic_Payment_Surcharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Automatic Payment Surcharges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Tax_Acc_on_Order_Units_By_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Tax Acc on Order Units By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Payroll_PIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Payroll PIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Technician_PIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Technician PIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_TBD_On_Invoice_Previews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting when enabled will populate invoice# with “TBD” instead of the CO number.</description>
        <inlineHelpText>Setting when enabled will populate invoice# with “TBD” instead of the CO number.</inlineHelpText>
        <label>Show TBD On Invoice Previews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Tax_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhanced Tax Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Markup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Exchange Rate Markup</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Id_To_Include_On_Deal_Documents__c</fullName>
        <description>SF Id of deal form to include on the pdf of deal documents.</description>
        <inlineHelpText>SF Id of deal form to include on the pdf of deal documents.</inlineHelpText>
        <label>Form Id To Include On Deal Documents</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Individual_Purchase_Tax_As__c</fullName>
        <label>Group Individual Purchase Tax As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Individual_Sales_Tax_As__c</fullName>
        <label>Group Individual Sales Tax As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Hours_Rate_On_Service_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Hours/Rate On Service Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Part_Numbers_On_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Part Numbers On Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Kit_Details_On_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Kit Details On Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Currency_Code__c</fullName>
        <label>Home Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_MSRP_and_Discount_on_Part_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include MSRP and Discount on Part Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Zero_Priced_Deal_Options_On_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Zero Priced Deal Options On Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Prices_On_Part_Labels__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Prices On Part Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Exchange_Rate_Markup_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exchange Rate Markup Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ready_To_Invoice_Required_To_Finalize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ready To Invoice Required To Finalize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfCustomersRecordPageSize__c</fullName>
        <label>NumberOfCustomersRecordPageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordering_Tax_Rate__c</fullName>
        <label>Ordering Tax Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Tax_Liability_Category__c</fullName>
        <label>Purchase Tax Liability Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Tracking_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to control which part transaction type will be used for all CO part sales generated from Shopify</description>
        <label>Record Tracking Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SearchMinCharLength__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Minimum characters length to initiate search for Filters and Autocomplete</description>
        <inlineHelpText>Minimum characters length to initiate search for Filters and Autocomplete</inlineHelpText>
        <label>SearchMinCharLength</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_From_Email_Id__c</fullName>
        <label>Sent From Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Discount_Fee_Id__c</fullName>
        <label>Shopify Discount Fee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Fee_Id__c</fullName>
        <label>Shopify Fee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Payment_Method_Id__c</fullName>
        <label>Shopify Payment Method Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Shipping_Fee_Id__c</fullName>
        <label>Shopify Shipping Fee Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_TT_Id__c</fullName>
        <label>Shopify TT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Rate__c</fullName>
        <label>Stamp Duty Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <label>State Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Included_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Included Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Hours_Method_On_Jobs__c</fullName>
        <label>Technician Hours Method On Jobs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Credit_Can_Not_Exceed_Unit_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needs to ensure that the sales tax credit for the trades does not exceed the sales tax calculated on the units.</description>
        <label>Trade Tax Credit Can Not Exceed Unit Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Expense_Category__c</fullName>
        <label>Notional Input Tax Expense Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Liability_Category__c</fullName>
        <label>Sales Tax Liability Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Pending_Sale_Category__c</fullName>
        <label>Notional Input Tax Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Charge_On_Account_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field limit the use of the Charge on Account payment method</description>
        <inlineHelpText>This field limit the use of the Charge on Account payment method</inlineHelpText>
        <label>Is Charge On Account Restricted</label>
        <type>Checkbox</type>
    </fields>
    <label>Configurations</label>
</CustomObject>